# soulstar

./: .gitignore  Cargo.toml  README.md  build.rs  diagram.json  justfile  rustfmt.toml  souls.toml  wokwi.toml
.cargo/: config.toml
src/: animations.rs  colour.rs  configuration.rs  display_task.rs  heartbeat_task.rs  led_driver.rs  main.rs  presence.rs  soul_config.rs  throbber.rs  tracker.rs  utils.rs
