[package]
edition = "2024"
name = "soulstar"
version = "0.1.0"

[[bin]]
name = "soulstar"
path = "src/main.rs"

[features]

[dependencies]
defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.0.0" }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480", "arch-riscv32", "defmt"] }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt-timestamp-uptime-ms"] }
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [ "esp32c6", "defmt", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6", "defmt", "esp-rom-sys"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c6", "unstable", "defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6", "defmt"] }
#esp-hal-smartled = { version = "0.16.0", features = ["esp32c6"] }
esp-hal-smartled = { path = "../esp-hal-community/esp-hal-smartled", features = ["esp32c6"] }
esp-println = { version = "0.15.0", features = ["esp32c6"] }
esp-wifi = { version = "0.15.0", features = [
    "ble",
    "builtin-scheduler",
    "esp-alloc",
    "esp32c6",
    "defmt"
] }
fastrand = { version = "2.3.0", default-features = false }
heapless = { version = "0.8" }
rand_core = "0.9.3"
smart-leds = "0.4.0"
static_cell = { version = "2.1.1" }
trouble-host = { version = "0.2.4", features = ["scan", "central", "defmt"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimisations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
