[package]
edition = "2024"
name = "soulstar"
version = "0.1.0"

[[bin]]
name = "soulstar"
path = "src/main.rs"

[features]

[dependencies]
bt-hci = { version = "0.6.0" }
defmt = { version = "1.0.1" }
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt-timestamp-uptime-ms"] }
esp-alloc = "0.9"
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c6", "defmt", "esp-rom-sys"] }
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable", "defmt"] }
# These options are temporary until the esp-hal-smartled latest version has been released to crates.io
#esp-hal-smartled = { version = "0.17.0", features = ["esp32c6"] }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", features = ["esp32c6"] } # Temporary but it works for everyone
esp-radio = { version = "0.17.0", features = ["ble", "esp-alloc", "esp32c6", "defmt", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy","esp-alloc", "esp-radio", "esp32c6", ] }
fastrand = { version = "2.3.0", default-features = false }
heapless = { version = "0.9" }
rand_core = "0.9.3"
smart-leds = "0.4.0"
static_cell = { version = "2.1" }
trouble-host = { version = "0.5", features = ["scan", "central", "defmt"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimisations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
strip = true # Massively reduces binary size (8M to 440k)